--- a/templates/admin/wpsc-admin_ce-export.css
+++ b/templates/admin/wpsc-admin_ce-export.css
@@ -1,3 +1,5 @@
+/* Tabbed navigation */
+
 .wpsc-product_page_wpsc_ce h2 .nav-tab {
 	font-size: 16px;
 	line-height:20px;
@@ -7,4 +9,24 @@
 
 .wpsc-product_page_wpsc_ce h2.nav-tab-wrapper {
 	padding-left:7px;
+}
+
+/* Support - Donate / Rate */
+
+.wpsc-product_page_wpsc_ce .support-donate_rate {
+	display:block;
+	float:right;
+}
+.wpsc-product_page_wpsc_ce .support-donate_rate p {
+	margin-top:16px;
+}
+.wpsc-product_page_wpsc_ce .support-donate_rate .star {
+	vertical-align:bottom;
+	display:inline-block;
+	width:17px;
+	height:17px;
+	background:url('images/star.png') no-repeat;
+}
+.wpsc-product_page_wpsc_ce .support-donate_rate span {
+	display:none;
 }
