* Fixed: Export buttons not adjusting Export Dataset * Added: Support for Length column Plugin update
git-svn-id: https://plugins.svn.wordpress.org/wp-e-commerce-exporter/trunk@697075 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/templates/admin/wpsc-admin_ce-export.css
+++ b/templates/admin/wpsc-admin_ce-export.css
@@ -54,6 +54,7 @@
 .wpsc-product_page_wpsc_ce .support-donate_rate {
 	display:block;
 	float:right;
+	margin-right:1em;
 }
 .wpsc-product_page_wpsc_ce .support-donate_rate p {
 	margin-top:16px;
