* Fixed: Styling in WP e-Commerce 3.7 * Fixed: Permission issue in WP e-Commerce 3.7 * Fixed: Export link within Plugins screen * Added: Product Tax Bands support * Fixed: Export buttons not adjusting Export Dataset * Added: Support for Length column * Added: Product Variation support * Added: Taxable Amount Product detail * Fixed: Local Shipping and International Shipping Product details * Added: No Shipping Product detail * Added: Notify OOS and Unpublish OOS Product details
git-svn-id: https://plugins.svn.wordpress.org/wp-e-commerce-exporter/trunk@704927 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/templates/admin/wpsc-admin_ce-export.css
+++ b/templates/admin/wpsc-admin_ce-export.css
@@ -1,5 +1,6 @@
 /* Tabbed navigation */
 
+.store_page_wpsc_ce h2 .nav-tab,
 .wpsc-product_page_wpsc_ce h2 .nav-tab {
 	font-size: 16px;
 	line-height:20px;
@@ -7,43 +8,52 @@
 	margin-right:0;
 }
 
+.store_page_wpsc_ce h2.nav-tab-wrapper,
 .wpsc-product_page_wpsc_ce h2.nav-tab-wrapper {
 	padding-left:7px;
 }
 
 /* Export */
 
+.store_page_wpsc_ce #export-type th,
 .wpsc-product_page_wpsc_ce #export-type th {
 	padding:0;
 }
+.store_page_wpsc_ce #export-type td,
 .wpsc-product_page_wpsc_ce #export-type td {
 	padding:0;
 }
+.store_page_wpsc_ce .postbox .submit,
 .wpsc-product_page_wpsc_ce .postbox .submit {
 	padding:0.3em 0;
 }
-
+.store_page_wpsc_ce .overview-left,
 .wpsc-product_page_wpsc_ce .overview-left {
 	float:left;
 	width:75%;
 }
+.store_page_wpsc_ce .overview-right,
 .wpsc-product_page_wpsc_ce .overview-right {
 	float:left;
 	width:23%;
 }
+	.store_page_wpsc_ce .overview-right h3,
 	.wpsc-product_page_wpsc_ce .overview-right h3 {
 		font-size:16px;
 	}
+		.store_page_wpsc_ce .overview-right h3 span,
 		.wpsc-product_page_wpsc_ce .overview-right h3 span {
 			float:right;
 			font-size:11px;
 			font-weight:normal;
 		}
+	.store_page_wpsc_ce .overview-right p,
 	.wpsc-product_page_wpsc_ce .overview-right p {
 		font-size:12px;
 		color:#333;
 		line-height:1.6em;
 	}
+	.store_page_wpsc_ce .overview-right ul,
 	.wpsc-product_page_wpsc_ce .overview-right ul {
 		font-size:12px;
 		line-height:1.2em;
@@ -51,14 +61,17 @@
 
 /* Support - Donate / Rate */
 
+.store_page_wpsc_ce .support-donate_rate,
 .wpsc-product_page_wpsc_ce .support-donate_rate {
 	display:block;
 	float:right;
 	margin-right:1em;
 }
+.store_page_wpsc_ce .support-donate_rate p,
 .wpsc-product_page_wpsc_ce .support-donate_rate p {
 	margin-top:16px;
 }
+.store_page_wpsc_ce .support-donate_rate .star,
 .wpsc-product_page_wpsc_ce .support-donate_rate .star {
 	vertical-align:bottom;
 	display:inline-block;
@@ -66,6 +79,7 @@
 	height:17px;
 	background:url('images/star.png') no-repeat;
 }
+.store_page_wpsc_ce .support-donate_rate span,
 .wpsc-product_page_wpsc_ce .support-donate_rate span {
 	display:none;
 }
